@@ -1,6 +1,0 @@
-{
-	"technology":
-	[
-		["dect-concrete-walls", "dect-advanced-wall"]
-	]
-}
