@@ -1,13 +1,0 @@
-for index, force in pairs(game.forces) do
-	force.reset_recipes()
-	force.reset_technologies()
-
-	local tech = force.technologies
-	local rec = force.recipes
-
-	if settings.startup["dectorio-walls"].value then
-		if tech["stone-wall"].researched then
-			rec["dect-wood-wall"].enabled = true
-		end
-	end
-end
